1998-09-29  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.c, gnome-dialog.h: Replace dialog's modality
	facilities with the ones from GtkWindow. Since GtkWindow's were
	exactly the same nothing should break (unless you accessed the
	modal flag directly and then you deserve breakage). Also blew away
	that log stuff on the bottom, for better or worse.
	(struct _GnomeDialog): Nuke modal field.
	(gnome_dialog_init): Don't init the modal field.
	(gnome_dialog_set_modal): Call gtk_window_set_modal and spew
	irritating warning to stop using this function.
	(gnome_dialog_run_modal): Use gtk_window_set_modal
	(gnome_dialog_run): Use GTK_WINDOW(dialog)->modal and
	gtk_window_set_modal.
	(gnome_dialog_close_real): Don't remove grab, GtkWindow does it on
	hide.
	(gnome_dialog_show): Don't add grab.
	
1998-09-28  Havoc Pennington  <hp@pobox.com>

	* gnome-animator.c, gnome-animator.h: Misspell private, so C++
	doesn't complain.

1998-09-28  Ettore Perazzoli  <ettore@comm2000.it>

	* Makefile.am (libgnomeui_la_SOURCES): Added `gnome-animator.c'.
	(libgnomeuiinclude_HEADERS): Added `gnome-animator.h'.
	(noinst_PROGRAMS): Added `animator_demo'.
	(animator_demo_SOURCES, animator_demo_LDADD): New variables for
	compiling `animator_demo'.

	* libgnomeui.h: #Include "gnome-animator.h".

	* animator_demo.c: New file: simple demo for `GnomeAnimator'.  It
 	currently requires some images from `gnome-core'...  I'll have to
 	fix this.

	* gnome-animator.c, gnome-animator.h: New files: new
 	`GnomeAnimator' widget.

1998-09-27  Havoc Pennington  <hp@pobox.com>

	* gnome-actionarea.h, gnome-actionarea.c: Removed.
	* Makefile.am, libgnomeui.h: Changed accordingly.

1998-09-27  Raja R Harinath  <harinath@cs.umn.edu>

	`automake' 1.3b and older have a bug with handling continuation 
	lines inside conditionals.
	* Makefile.am (gtkcal_headers): Don't use continuation lines.
	(gtkcal_sources): Likewise.
	(EXTRA_libgnomeui_la_SOURCES): List gtkcalendar.[ch].
	